<resources>
    <string name="app_name">League of Legends Events</string>
    <string name="events">Events</string>
    <string name="leagues">Leagues</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaguename">leagueName</string>
    <string name="leagueimage">leagueImage</string>
    <string name="team1_logo">team1 logo</string>
    <string name="team1">team1</string>
    <string name="team2_logo">team2 logo</string>
    <string name="team2">team2</string>
    <string name="best_of">Best of</string>
    <string name="_3">3</string>
    <string name="g2_esports">G2 esports</string>
    <string name="fnatic">fnatic</string>
    <string name="best_of_3">Best of 3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_14_3_2020_20_00">14.3.2020. 20:00</string>
    <string name="tbd">TBD</string>
    <string name="matches">Matches</string>
    <string name="teamimage">teamImage</string>
    <string name="teamname">teamName</string>
    <string name="playerimage">playerImage</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="summonername">summonerName</string>
    <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="team">Team</string>
    <string name="singleplayerteamlogo">singlePlayerTeamLogo</string>
    <string name="role">Role</string>
    <string name="countryflag">countryFlag</string>
    <string name="flag">hr.png</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string-array name="single_league_filter">
        <item>Matches</item>
        <item>Teams</item>
    </string-array>
</resources>
