<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SinglePlayerActivity"
    android:background="#212121">

    <ImageView
        android:id="@+id/single_player_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/playerimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_players" />

    <TextView
        android:id="@+id/player_name_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/firstname_lastname"
        android:textColor="#C6930A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/single_player_image"
        app:layout_constraintStart_toEndOf="@+id/single_player_image" />

    <TextView
        android:id="@+id/player_summoner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/summonername"
        android:textColor="#C6930A"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/single_player_image"
        app:layout_constraintTop_toTopOf="@+id/single_player_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C6930A"
        app:layout_constraintBottom_toTopOf="@+id/text_information"
        app:layout_constraintTop_toBottomOf="@+id/single_player_image"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/information"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_player_image" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="#C6930A"
        app:layout_constraintStart_toStartOf="@+id/text_information"
        app:layout_constraintTop_toBottomOf="@+id/text_information" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textColor="#C6930A"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/team"
        android:textColor="#C6930A"
        app:layout_constraintStart_toStartOf="@+id/text_country"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/single_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/firstname_lastname"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name" />

    <TextView
        android:id="@+id/single_player_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/single_player_country_flag"
        app:layout_constraintTop_toBottomOf="@+id/single_player_name" />

    <TextView
        android:id="@+id/single_player_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/team"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/single_player_team_logo"
        app:layout_constraintTop_toBottomOf="@+id/single_player_country" />

    <ImageView
        android:id="@+id/single_player_team_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/singleplayerteamlogo"
        app:layout_constraintStart_toStartOf="@+id/single_player_country_flag"
        app:layout_constraintTop_toBottomOf="@+id/single_player_country"
        app:srcCompat="@drawable/ic_teams" />

    <ImageView
        android:id="@+id/single_player_country_flag"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/countryflag"
        app:layout_constraintStart_toStartOf="@+id/single_player_name"
        app:layout_constraintTop_toBottomOf="@+id/single_player_name"
        app:srcCompat="@drawable/hr" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C6930A"
        app:layout_constraintBottom_toTopOf="@+id/text_matches"
        app:layout_constraintTop_toBottomOf="@+id/text_role"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/text_matches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/matches"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_role" />

    <TextView
        android:id="@+id/text_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/role"
        android:textColor="#C6930A"
        app:layout_constraintStart_toStartOf="@+id/text_team"
        app:layout_constraintTop_toBottomOf="@+id/text_team" />

    <TextView
        android:id="@+id/single_player_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/role"
        android:textColor="#ffffff"
        app:layout_constraintStart_toEndOf="@+id/roleImage"
        app:layout_constraintTop_toBottomOf="@+id/single_player_team_name" />

    <ImageView
        android:id="@+id/roleImage"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/role"
        app:layout_constraintStart_toStartOf="@+id/single_player_team_logo"
        app:layout_constraintTop_toBottomOf="@+id/single_player_team_logo"
        app:srcCompat="@drawable/adc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/single_player_matches_recycler_view"
        android:layout_width="409dp"
        android:layout_height="393dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_matches" />


</androidx.constraintlayout.widget.ConstraintLayout>